# karna

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml  flake.nix  package.json  shell.nix  tailwind.config.js
.github/workflows/: pr-test.yml
.sqlx/: query-25fee62d539494c5491ae60e0ff42e7999ab3df92b93e8b4ca141c5d53fecf47.json  query-2ed18c422682decf9379e451f7517ee7a5016b1c9c41c658ebfe7cf81a851e7c.json  query-2f8340f24d6cd1764cd49dd2de50b1873c9884dc6db422afe49d1d0f2d8d0b99.json  query-5e7e16eb8648e5d38437572193fa21f2bbef3f65f35063cddbb29b06dd480fc1.json  query-f92754a6d64c8d36310cda474a0d5f61e7189d7e41d6197147f9d0fe629c8cbd.json
app/: Cargo.toml
app/src/: error_template.rs  lib.rs
app/src/actions/: error.rs  mod.rs
app/src/actions/datasets/: create.rs  delete.rs  details.rs  list.rs  mod.rs
app/src/actions/queries/: mod.rs
app/src/common/: cookie.rs  mod.rs  theme.rs
app/src/common/models/: dataset.rs
app/src/components/: mod.rs  navbar.rs  sidebar.rs
app/src/components/home/: dataset_insights.rs  mod.rs  notebook.rs
app/src/pages/: home.rs
engine/: Cargo.toml  test_table.db
engine/src/: error.rs  lib.rs
engine/src/driver/: mod.rs
engine/src/driver/duckdb/: config.rs  driver.rs  mod.rs  utils.rs
engine/src/driver/libsql/: driver.rs
engine/src/driver/sqlx/: driver.rs  mod.rs
engine/src/models/: dataset.rs
engine/src/sources/: file_system.rs  mod.rs  utils.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
karna-cli/: Cargo.toml
karna-core/: Cargo.toml
karna-db/: Cargo.toml
karna-server/: Cargo.toml
migrations/: 20250310042052_create_dataset_table.sql  20250312085721_create_notebook_table.sql  20250312091613_create_cell_table.sql
server/: Cargo.toml
server/src/: error.rs  fileserv.rs  main.rs
server/src/api/: middleware.rs  mod.rs
server/src/api/datasets/: create.rs  delete.rs  details.rs  list.rs  mod.rs  update.rs
server/src/api/query/: mod.rs  sql.rs
style/: output.css
test-data/: seria.csv
