[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
duckdb = { version = "1.1.1", features = ["bundled", "r2d2"] }
uuid = { version = "1.10.0", features = ["serde"] }
base64 = "0.22"
num_cpus = "1"
r2d2 = "0.8"
rand = "0.8"
libsql = { version = "0.6", features = ["core"] }
tracing.workspace = true
snafu.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
chrono.workspace = true
