[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
duckdb = { version = "1.2.0", features = ["r2d2"] }
uuid = { version = "1.10.0", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
base64 = "0.22"
num_cpus = "1"
r2d2 = "0.8"
rand = "0.8"
tracing.workspace = true
snafu.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
chrono.workspace = true
